<resources>
    <string name="app_name">Horizon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new">newAct</string>
    <string name="title_activity_profile_acc">ProfileAcc</string>
    <string name="title_activity_devices_check">DevicesCheck</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="title_activity_qrscanner">QRScanner</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_MainActivity">MainActivity</string>
    <string name="title_activity_create_matrix">CreateMatrix</string>
    <string name="title_activity_create_grid">CreateGrid</string>
    <string name="title_activity_admin_page">AdminPage</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_unlock_login">UnlockLogin</string>
    <string name="title_activity_access_permission">AccessPermission</string>
    <string name="title_activity_total_device">TotalDevice</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="title_activity_global_calendar">GlobalCalendar</string>
    <string name="title_activity_set_zone">SetZone</string>
    <string name="title_activity_zone_set">ZoneSet</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="title_activity_loading_circle">LoadingCircle</string>
    <string name="title_activity_unlock_screen">UnlockScreen</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="scene_text">Scenes</string>
    <string name="area_text">Areas</string>
    <string name="setting">Settings</string>
    <string name="add_device_text">New device</string>
    <string name="add_group_text">New group</string>
    <string name="name">Name</string>
    <string name="choose_device">Select devices</string>
    <string name="save">Save</string>
    <string name="add_area_text">New area</string>
    <string name="add_scene_text">New scene</string>
    <string name="test_text">Testing</string>
    <string name="network_address">Network address</string>
    <string name="effect">Effect</string>
    <string name="bet_time">Time Interval</string>
    <string name="start">Start</string>
    <string name="open">Open</string>
    <string name="stop">Stop</string>
    <string name="close">Off</string>
    <string name="version_info">Version information</string>
    <string name="version_info_text">v3.1.0</string>
    <string name="edit_device">Edit device</string>
    <string name="edit_scene">Edit scene</string>
    <string name="edit_area">Edit area</string>
    <string name="edit_group">Edit group</string>
    <string name="device_list">Devices list</string>
    <string name="group_list">Groups list</string>
    <string name="finishask">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="no">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="inputdata">Import data</string>
    <string name="sdinput">Import from SD card</string>
    <string name="networkinput">Import from LAN</string>
    <string name="scannerdevice">Search devices in LAN</string>
    <string name="scannerwifi">Search WLAN</string>
    <string name="photograph">Take pictures</string>
    <string name="choosefromphoto">Select from folder</string>
    <string name="editor">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleteall">Delete all</string>
    <string name="add_success">Add successfully!</string>
    <string name="del_success">Delete successfully!</string>
    <string name="update_success">Update successfully!</string>
    <string name="add_fail_name">Add failed, name can not be empty!</string>
    <string name="add_fail_ov">Add failed, the name already exists!</string>
    <string name="add_fail">Add failed, the Device already exists!</string>
    <string name="del_fail">Delete failed!</string>
    <string name="update_fail_name">Update failed, name can not be empty!</string>
    <string name="update_fail_ov">Update failed, the name already exists!</string>
    <string name="update_fail">Update failed, the device already exists!</string>
    <string name="sdnot">Can not find SD card!</string>
    <string name="outputsuccess">Export successfully!</string>
    <string name="nophoto">File does not exist!</string>
    <string name="inputsuccess">Import successfully</string>
    <string name="isdelete">Delete or not?</string>
    <string name="help">Help</string>
    <string name="deal">Waiting......</string>
    <string name="isexport">Export to iLightsIn in SD card?</string>
    <string name="isimport">Import from iLightsIn in SD card?</string>
    <string name="choose_area">Select an area</string>
    <string name="choose_devicetype">Select the device type</string>
    <string name="devicetype">Device type</string>
    <string name="appinfo">App information</string>
    <string name="requestDialog">Synchronize data, accept?</string>
    <string name="responerequest_no">Request is rejected!</string>
    <string name="responerequest_yes">Request is accepted. sending file...</string>
    <string name="transmission">Sending file...</string>
    <string name="syssuccess">Synchronize successfully!</string>
    <string name="oncetry">start</string>
    <string name="exit_guide">Exit</string>
    <string name="resetconn">Connect failed, please try again!</string>
    <string name="brighting_et">%</string>
    <string name="fail">Import picture failed</string>
    <string name="pairing">Binding settings</string>
    <string name="error">Picture is too large to load</string>
    <string name="memoryerror">Out of memory</string>
    <string name="pair_tips">The new device has to be on binding mode!</string>
    <string name="clear_pair">Clear binding</string>
    <string name="time">Date</string>
    <string name="wlan_tip">2 Wifi devices can not synchronize database within iLEX at the same time. Please join other router to synchronize.</string>
    <string name="ios_tv">iOS QR code</string>
    <string name="android_tv">Android QR code</string>
    <string name="alarmset">Timer</string>
    <string name="timerset">Alarm</string>
    <string name="inputpassword">Password</string>
    <string name="repassword">Confirm</string>
    <string name="choose_network">Choose network...</string>
    <string name="newtoqrcode">Add by QR code</string>
    <string name="newtomanualpair">Add by binding</string>
    <string name="time_1">1st Timer</string>
    <string name="time_2">2nd Timer</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="aftertime">After this time...</string>
    <string name="timeset">Timer settings</string>
    <string name="scanerfail">Scan failed!</string>
    <string name="hue_initial_value">Select current color as power on color?</string>
    <string name="wifi_lag">The length of WLAN name exceeds the maximum!</string>
    <string name="resewifi">Please reselect WLAN network!</string>
    <string name="sysdatabase">Synchronize database</string>
    <string name="colortemperature">Save current color temperature as power on color temperature?</string>
    <string name="alllights">All devices</string>
    <string name="savecolor">Save color</string>
    <string name="electricity_tip">The device must be powered on before clicking the Save button</string>
    <string name="password_text">Password</string>
    <string name="show_password_text">Show password</string>
    <string name="candela_text">Set the candle mode?</string>
    <string name="normal_text">Set the normal mode?</string>
    <string name="knob_device">Dim touch panel</string>
    <string name="knob_Temp">CCT touch panel</string>
    <string name="knob_Rgb">RGB touch panel</string>
    <string name="pair_succ">Binding Done!</string>
    <string name="password_set">Gateway remote password</string>
    <string name="password_error">Connect failed, remote password is incorrect!</string>
    <string name="macaddress_error">Connect failed, device is offline!</string>
    <string name="password_prompt">6-8 numbers or letters</string>
    <string name="network_settings">Network settings</string>
    <string name="wifi_connt_success">Set successfully!</string>
    <string name="wifi_connt_filed">Set failed, please check the name and password!</string>
    <string name="clear_pair_yesorno">Clear the binding list?</string>
    <string name="delete_dev_yesorno">Delete the device?</string>
    <string name="send_error">Send failed</string>
    <string name="send_socket_null">The device and gateway are not in the same WLAN network!</string>
    <string name="adddevice_error">The gateway and client are not in the same WLAN!</string>
    <string name="area_nodevice">No device in this area!</string>
    <string name="add">Add</string>
    <string name="all_close">All Off</string>
    <string name="all_open">All On</string>
    <string name="back_text">Back</string>
    <string name="all_select">All</string>
    <string name="qrcode_err">QRCode error!</string>
    <string name="putintfor_getway">Import device from gateway?</string>
    <string name="putoutto_getway">Export device to gateway?</string>
    <string name="putoutto_getwayismax">The number of export devices exceeds the maximum 500, and the exceeding part can not be saved. Are you sure to export devices to gateway?</string>
    <string name="gateway_password">Gateway password</string>
    <string name="getdata_forgateway_err">Import failed!</string>
    <string name="senddata_togateway_err">Export failed!</string>
    <string name="gatewayinput">Import from gateway</string>
    <string name="sdoutput">Export to SD card</string>
    <string name="gatewayoutput">Export to gateway</string>
    <string name="outputdata">Export data</string>
    <string name="output_nodevice">No device to export!</string>
    <string name="pswd_err">Password error!</string>
    <string name="curr_pswd">Current password</string>
    <string name="new_pswd">New password</string>
    <string name="confirm_new_pswd">Confirm new password</string>
    <string name="curr_pswd_err">Current password error!</string>
    <string name="new_pswd_err">The password you typed do not match!</string>
    <string name="password_err">Password has to be 6-8 characters or numbers.</string>
    <string name="password_isempty">Password can not be empty!</string>
    <string name="password_seterr">Set failed!</string>
    <string name="del_img">Delete image</string>
    <string name="scan_barcode">Scan QRcode</string>
    <string name="post">Handheld dimmer</string>
    <string name="post_tip">Please press any key of the handheld dimmer, then click the Save button!</string>
    <string name="add_fail_langdown">Add failed. Please press any key of the handheld dimmer, then click the Save button!</string>
    <string name="edit_pair_tip">Please power on the bound devices before clicking the Clear Binding button!</string>
    <string name="channel_1">Channel1</string>
    <string name="channel_2">Channel2</string>
    <string name="channel_3">Channel3</string>
    <string name="channel_4">Channel4</string>
    <string name="channel_5">Channel5</string>
    <string name="channel_6">Channel6</string>
    <string name="input_scene">Download scene</string>
    <string name="scene1">Scene1</string>
    <string name="scene2">Scene2</string>
    <string name="scene3">Scene3</string>
    <string name="scene4">Scene4</string>
    <string name="scene5">Scene5</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
</resources>