<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <RelativeLayout android:background="@drawable/pswd" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20.0dip" android:textColor="#ff373737" android:id="@id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:src="@drawable/separator" android:layout_below="@id/tv_name" android:layout_centerHorizontal="true" />
            <RelativeLayout android:id="@id/pass_rllt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_below="@id/imageView1" android:layout_centerHorizontal="true">
                <Button android:textSize="15.0dip" android:textColor="#ff373737" android:id="@id/textView2" android:background="@drawable/pswd_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_text" android:layout_centerVertical="true" />
                <EditText android:textColor="#ff373737" android:id="@id/editText1" android:background="@drawable/pswd_edit" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_toRightOf="@id/textView2" android:layout_centerVertical="true" android:inputType="textPassword" android:imeOptions="actionDone" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/pass_rlltb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/pass_rllt">
                <Button android:id="@id/textViewa" android:background="@drawable/setting_blank" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_centerVertical="true" />
                <Button android:id="@id/textViewb" android:background="@drawable/pswd_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/textViewa" android:layout_centerVertical="true" />
                <CheckBox android:textSize="15.0dip" android:textColor="#ff373737" android:id="@id/chkbox_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_password_text" android:layout_toRightOf="@id/textViewb" android:layout_centerVertical="true" style="@style/CustomCheckboxTheme" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/pass_rlltbb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/pass_rlltb" android:layout_centerHorizontal="true">
                <TextView android:textSize="15.0dip" android:textColor="@color/red" android:id="@id/textinfor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_prompt" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/pass_rllt2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/pass_rlltbb" android:layout_centerHorizontal="true">
                <Button android:textColor="#ff373737" android:id="@id/btn_ok" android:background="@drawable/button_ok_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_centerVertical="true" />
                <Button android:textColor="#ff373737" android:id="@id/btn_cancel" android:background="@drawable/button_ok_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/no" android:layout_toRightOf="@id/btn_ok" android:layout_centerVertical="true" />
            </RelativeLayout>
            <Button android:id="@id/textViewc" android:background="@drawable/blank0100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/pass_rllt2" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>