<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/backgroud_circular" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/relativelayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip">
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/blank2" android:layout_centerVertical="true" />
        <ImageView android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/blank2" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/rgbw_pic" android:layout_toRightOf="@id/imageView1" android:layout_centerVertical="true" />
        <ImageView android:id="@id/device_pic_tick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/device_pic_tick" android:layout_alignRight="@id/imageView2" android:layout_alignBottom="@id/imageView2" />
        <TextView android:textSize="14.0dip" android:textColor="#ff373737" android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:layout_toLeftOf="@id/imageView3" android:layout_toRightOf="@id/imageView2" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ImageView android:id="@id/blank_yhff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/blank3" android:layout_below="@id/relativelayout1" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/relativeLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/blank_yhff" android:layout_centerHorizontal="true">
        <Button android:textSize="14.0dip" android:textColor="#ff6d6d6d" android:id="@id/button1" android:background="@drawable/left_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/up" android:layout_weight="1.0" />
        <Button android:textSize="14.0dip" android:textColor="#ff6d6d6d" android:id="@id/button2" android:background="@drawable/midd_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop" android:layout_weight="1.0" />
        <Button android:textSize="14.0dip" android:textColor="#ff6d6d6d" android:id="@id/button3" android:background="@drawable/right_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/down" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@id/imageView9321" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/blank3" android:layout_below="@id/relativeLayout2" />
</RelativeLayout>